Fix color contrast

--- a/src/styles/custom/_variables.scss
+++ b/src/styles/custom/_variables.scss
@@ -12,7 +12,7 @@ $headings-line-height: 1.4;
 $well-bg: lighten( $highlight-dark-color, 65% );
 $well-border: lighten( $highlight-dark-color, 60% );
 
-$pill-color: #526B91;
+$pill-color: #274066;
 $pill-bg: rgba(179, 169, 173, 0.1);
 $pill-border-radius: $nav-pills-border-radius;
 $pill-padding: .4rem 1rem .3rem;
